add offline support for punishments